Use struct for NotFoundTemplate data

--- a/resources/not-found.mustache
+++ b/resources/not-found.mustache
@@ -41,7 +41,7 @@
 </head>
 <body>
 <p>404 Not Found - No redirection target available for</p>
-<p class="bold" id="link">{{redirectName}}</p>
+<p class="bold" id="link">{{RedirectName}}</p>
 <p>Looks like someone may have sent you the wrong link or you mistyped somewhere!</p>
 </body>
 </html>
