Make redirect-info target clickable

--- a/resources/base.gohtml
+++ b/resources/base.gohtml
@@ -22,6 +22,11 @@
             overflow-wrap: break-word;
         }
 
+        #link a {
+            color: inherit;
+            text-decoration: none;
+        }
+
         .bold {
             font-weight: bold;
         }
