--- a/resources/redirect-info.gohtml
+++ b/resources/redirect-info.gohtml
@@ -6,5 +6,5 @@
     <p>The redirect</p>
     <p class="bold" id="link">{{.RedirectName}}</p>
     <p>will lead to</p>
-    <p class="bold" id="link">{{.Target}}</p>
+    <p class="bold" id="link"><a href="{{.Target}}">{{.Target}}</a></p>
 {{end}}
