Fix template parse order

--- a/resources/base.gohtml
+++ b/resources/base.gohtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     {{template "sharedHead"}}
-    <title>{{template "title" .}}</title>
+    <title>{{block "title" .}}Go-Short-Link{{end}}</title>
 </head>
 <body>
 {{template "body" .}}
