Make Icon configurable per template

--- a/resources/base.gohtml
+++ b/resources/base.gohtml
@@ -49,5 +49,5 @@
             }
         }
     </style>
-    <link rel="icon" href="data:;base64,=">
+    <link rel="icon" href="{{block "icon" .}}data:;base64,={{end}}">
 {{end}}
