--- a/resources/redirect-info.gohtml
+++ b/resources/redirect-info.gohtml
@@ -1,6 +1,4 @@
-{{define "title"}}
-    Redirect Information
-{{end}}
+{{define "title"}}Redirect Information{{end}}
 
 {{define "body"}}
     <p>The redirect</p>
