--- a/resources/not-found.gohtml
+++ b/resources/not-found.gohtml
@@ -1,6 +1,4 @@
-{{define "title"}}
-Not Found - No redirect available
-{{end}}
+{{define "title"}}Not Found - No redirect available{{end}}
 
 {{define "body"}}
     <p>404 Not Found - No redirection target available for</p>
