Fix duplicate element IDs

--- a/resources/not-found.gohtml
+++ b/resources/not-found.gohtml
@@ -2,6 +2,6 @@
 
 {{define "body"}}
     <p>404 Not Found - No redirection target available for</p>
-    <p class="bold" id="link">{{.RedirectName}}</p>
+    <p class="bold link">{{.RedirectName}}</p>
     <p>Looks like someone may have sent you the wrong link, or you mistyped somewhere!</p>
 {{end}}
