--- a/resources/redirect-info.gohtml
+++ b/resources/redirect-info.gohtml
@@ -2,7 +2,7 @@
 
 {{define "body"}}
     <p>The redirect</p>
-    <p class="bold" id="link">{{.RedirectName}}</p>
+    <p class="bold link">{{.RedirectName}}</p>
     <p>will lead to</p>
-    <p class="bold" id="link"><a href="{{.Target}}">{{.Target}}</a></p>
+    <p class="bold link"><a href="{{.Target}}">{{.Target}}</a></p>
 {{end}}
