--- a/resources/base.gohtml
+++ b/resources/base.gohtml
@@ -29,11 +29,11 @@
             text-align: center;
         }
 
-        #link {
+        .link {
             overflow-wrap: break-word;
         }
 
-        #link a {
+        .link a {
             color: inherit;
             text-decoration: none;
         }
