--- a/resources/base.gohtml
+++ b/resources/base.gohtml
@@ -10,7 +10,7 @@
 </html>
 
 {{define "sharedHead"}}
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <style>
         :root {
             --bg-color: #f0f0f0;
