--- a/resources/base.gohtml
+++ b/resources/base.gohtml
@@ -11,6 +11,7 @@
 
 {{define "sharedHead"}}
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width" />
     <style>
         :root {
             --bg-color: #f0f0f0;
