Remove erroneous type attribute on script tag

--- a/web/tmpl/base.gohtml
+++ b/web/tmpl/base.gohtml
@@ -81,7 +81,7 @@
         {{end}}
             © 2023-{{now.UTC.Year}} ZenDrake
         </p>
-        <script type="text/javascript">
+        <script defer>
             "use strict";
 
             function utcToLocal(timestampString) {
