Theme whole html doc, not just the body

--- a/web/tmpl/base.gohtml
+++ b/web/tmpl/base.gohtml
@@ -19,7 +19,7 @@
             --text-color: #000;
         }
 
-        body {
+        html {
             background-color: var(--bg-color);
             color: var(--text-color);
             font-family: sans-serif;
