Dynamically add favicon link tags

--- a/internal/tmpl/html/base.gohtml
+++ b/internal/tmpl/html/base.gohtml
@@ -60,7 +60,7 @@
             }
         }
     </style>
-    <link rel="icon" href="{{block "icon" .}}data:;base64,={{end}}">
+    {{block "favicons" .}}{{end}}
 {{end}}
 
 {{define "footer"}}
